src/include/musicxx_extern_plugin_api.h

/* ==================== 跨边界字符串 ==================== */

/// 只读借用字符串视图 (指向调用方内存, UTF-8, 不要求 NUL 结尾)
typedef struct MusicxxExternPluginStringView {
    const char* data;
    uint64_t    size;
} MusicxxExternPluginStringView;
/// 宿主堆分配字符串 (显式所有权: 由宿主分配, 调用方用 string_free 释放)
typedef struct MusicxxExternPluginString {
    char*    data; ///< 以 \0 结尾; 空串或未设置时为 NULL
    uint64_t size; ///< 字节数 (不含结尾 \0)
} MusicxxExternPluginString;
/// 宿主句柄 (不透明; 进程内单例)
typedef struct MusicxxExternPluginHost MusicxxExternPluginHost;
/// 宿主 → 插件事件总线发布 (topic 必须 musicxx.* 或 plugin.<id>.*)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_event_publish(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* topic,
        const MusicxxExternPluginStringView* payload_json,
        MusicxxExternPluginString*           log
    );
/* ==================== 插件管理 ==================== */

/// 扫描插件目录 (用户目录 + 随包目录) + 内置清单 → JSON 数组
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_plugin_scan(
        MusicxxExternPluginHost*    h,
        MusicxxExternPluginString* out_json,
        MusicxxExternPluginString* log
    );
/// 当前已加载插件状态快照 (JSON 数组)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_plugin_list(
        MusicxxExternPluginHost*    h,
        MusicxxExternPluginString* out_json,
        MusicxxExternPluginString* log
    );
/// 异步装载 (结果经 `musicxx.plugin.loaded` / `musicxx.plugin.error` 事件回报)
/// - `id_or_path` 可为插件 id 或插件目录/库文件路径
/// - `options_json`: {"args":{...},"enabled":true,"tempDir":"...","kind":"native|js|builtin"}
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_plugin_load(
    MusicxxExternPluginHost*              h,
    const MusicxxExternPluginStringView* id_or_path,
    const MusicxxExternPluginStringView* options_json,
    MusicxxExternPluginString*           log
);
/// 同步装载 (仅管理页/测试的隔离 isolate 使用; 带超时)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_plugin_load_sync(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* id_or_path,
        const MusicxxExternPluginStringView* options_json,
        uint32_t                              timeout_ms,
        MusicxxExternPluginString*           log
    );
/// 启用 / 禁用 / 卸载 / 重载 (异步, 事件回报)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_plugin_enable(
    MusicxxExternPluginHost*              h,
    const MusicxxExternPluginStringView* id,
    MusicxxExternPluginString*           log
);
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_plugin_disable(
    MusicxxExternPluginHost*              h,
    const MusicxxExternPluginStringView* id,
    MusicxxExternPluginString*           log
);
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_plugin_unload(
    MusicxxExternPluginHost*              h,
    const MusicxxExternPluginStringView* id,
    MusicxxExternPluginString*           log
);
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_plugin_reload(
    MusicxxExternPluginHost*              h,
    const MusicxxExternPluginStringView* id,
    MusicxxExternPluginString*           log
);
/// 更新插件参数 (需 reload 生效, 由 Dart 决定何时重载)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_plugin_set_args(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* id,
        const MusicxxExternPluginStringView* args_json,
        MusicxxExternPluginString*           log
    );
/// 插件配置路径 (供管理页/插件读取); 未加载的插件按目录推导
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_plugin_get_config_path(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* id,
        MusicxxExternPluginString*           out,
        MusicxxExternPluginString*           log
    );