lib/src/bindings_generated.dart


  late final _musicxx_extern_plugin_event_publishPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_event_publish');
  late final _musicxx_extern_plugin_event_publish =
      _musicxx_extern_plugin_event_publishPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 扫描插件目录 (用户目录 + 随包目录) + 内置清单 → JSON 数组
  int musicxx_extern_plugin_plugin_scan(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_scan(h, out_json, log);
  }

  late final _musicxx_extern_plugin_plugin_scanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_scan');
  late final _musicxx_extern_plugin_plugin_scan =
      _musicxx_extern_plugin_plugin_scanPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 当前已加载插件状态快照 (JSON 数组)
  int musicxx_extern_plugin_plugin_list(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_list(h, out_json, log);
  }

  late final _musicxx_extern_plugin_plugin_listPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_list');
  late final _musicxx_extern_plugin_plugin_list =
      _musicxx_extern_plugin_plugin_listPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 异步装载 (结果经 `musicxx.plugin.loaded` / `musicxx.plugin.error` 事件回报)
  /// - `id_or_path` 可为插件 id 或插件目录/库文件路径
  /// - `options_json`: {"args":{...},"enabled":true,"tempDir":"...","kind":"native|js|builtin"}
  int musicxx_extern_plugin_plugin_load(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id_or_path,
    ffi.Pointer<MusicxxExternPluginStringView> options_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_load(h, id_or_path, options_json, log);
  }

  late final _musicxx_extern_plugin_plugin_loadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_load');
  late final _musicxx_extern_plugin_plugin_load =
      _musicxx_extern_plugin_plugin_loadPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 同步装载 (仅管理页/测试的隔离 isolate 使用; 带超时)
  int musicxx_extern_plugin_plugin_load_sync(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id_or_path,
    ffi.Pointer<MusicxxExternPluginStringView> options_json,
    int timeout_ms,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_load_sync(
      h,
      id_or_path,
      options_json,
      timeout_ms,
      log,
    );
  }

  late final _musicxx_extern_plugin_plugin_load_syncPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Uint32,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_load_sync');
  late final _musicxx_extern_plugin_plugin_load_sync =
      _musicxx_extern_plugin_plugin_load_syncPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              int,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 启用 / 禁用 / 卸载 / 重载 (异步, 事件回报)
  int musicxx_extern_plugin_plugin_enable(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_enable(h, id, log);
  }

  late final _musicxx_extern_plugin_plugin_enablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_enable');
  late final _musicxx_extern_plugin_plugin_enable =
      _musicxx_extern_plugin_plugin_enablePtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  int musicxx_extern_plugin_plugin_disable(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_disable(h, id, log);
  }

  late final _musicxx_extern_plugin_plugin_disablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_disable');
  late final _musicxx_extern_plugin_plugin_disable =
      _musicxx_extern_plugin_plugin_disablePtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  int musicxx_extern_plugin_plugin_unload(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_unload(h, id, log);
  }

  late final _musicxx_extern_plugin_plugin_unloadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_unload');
  late final _musicxx_extern_plugin_plugin_unload =
      _musicxx_extern_plugin_plugin_unloadPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  int musicxx_extern_plugin_plugin_reload(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_reload(h, id, log);
  }

  late final _musicxx_extern_plugin_plugin_reloadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_reload');
  late final _musicxx_extern_plugin_plugin_reload =
      _musicxx_extern_plugin_plugin_reloadPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 更新插件参数 (需 reload 生效, 由 Dart 决定何时重载)
  int musicxx_extern_plugin_plugin_set_args(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id,
    ffi.Pointer<MusicxxExternPluginStringView> args_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_set_args(h, id, args_json, log);
  }

  late final _musicxx_extern_plugin_plugin_set_argsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_set_args');
  late final _musicxx_extern_plugin_plugin_set_args =
      _musicxx_extern_plugin_plugin_set_argsPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 插件配置路径 (供管理页/插件读取); 未加载的插件按目录推导
  int musicxx_extern_plugin_plugin_get_config_path(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id,
    ffi.Pointer<MusicxxExternPluginString> out,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_get_config_path(h, id, out, log);
  }

  late final _musicxx_extern_plugin_plugin_get_config_pathPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_get_config_path');
  late final _musicxx_extern_plugin_plugin_get_config_path =
      _musicxx_extern_plugin_plugin_get_config_pathPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();
